# crime-dashboard-india

./: CHARTER.md  README.md  app.py  main.py  prediction (1).py  pyproject.toml  report.md
artifacts/probes/: replace_me_probe.md
data/: crime_data.csv
grading_feedback/: milestone_feedback.md
outputs/: baseline_metric.json  milestone_manifest.json  primary_metric.json  supporting_analysis.json
project_code/: analysis.py  data_cleaning.py
