[project]
name = "eco6810-crime-dashboard"
version = "0.1.0"
description = "India Crime Intelligence Dashboard — ECO6810 Final Project"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "streamlit>=1.32.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
]
